--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux (5.1.2-1) unstable; urgency=medium
+
+  * Add iptables masquerade support
+
+ -- Merlijn Wajer <merlijn@wizzup.org>  Wed, 24 Jul 2019 16:33:19 +0200
+
 linux (5.1.1-1) unstable; urgency=medium
 
   * Add twl4030-vibra
